--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -531,7 +531,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" id="Cvo-3B-IHr" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" barStyle="black" id="SxL-RR-xZj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="SxL-RR-xZj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -582,12 +582,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Rain" translatesAutoresizingMaskIntoConstraints="NO" id="Y3D-CS-bBz">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Rain" translatesAutoresizingMaskIntoConstraints="NO" id="Y3D-CS-bBz">
                                 <rect key="frame" x="0.0" y="55" width="375" height="612"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="48" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Twk-F6-aew">
-                                <rect key="frame" x="16" y="72" width="343" height="575"/>
+                                <rect key="frame" x="16" y="72" width="343" height="539"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -613,7 +612,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vt-3n-eYl">
-                                                    <rect key="frame" x="60" y="15.5" width="22" height="16.5"/>
+                                                    <rect key="frame" x="60" y="16" width="22" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="22" id="7Zo-ws-lYK"/>
                                                     </constraints>
@@ -622,13 +621,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bq9-e1-A7P">
-                                                    <rect key="frame" x="90" y="13.5" width="190" height="20"/>
+                                                    <rect key="frame" x="90" y="14" width="190" height="20"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EdA-GM-9gU">
-                                                    <rect key="frame" x="304" y="15.5" width="31" height="16.5"/>
+                                                    <rect key="frame" x="304" y="16" width="31" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="31" id="E6z-93-deo"/>
                                                     </constraints>
@@ -666,13 +665,32 @@
                                     <outlet property="delegate" destination="F5K-P5-yfW" id="wDN-4T-Qe9"/>
                                 </connections>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cz-2F-iZu">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Gzk-xE-YsP"/>
+                                    <barButtonItem title="Сбросить статистику" id="hSb-E1-897">
+                                        <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="clearStatistics:" destination="F5K-P5-yfW" id="p86-0N-Gpb"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0H9-K3-sRd"/>
+                                </items>
+                                <color key="barTintColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Twk-F6-aew" firstAttribute="top" secondItem="RiX-Wz-yXw" secondAttribute="bottom" constant="8" id="898-x0-lLX"/>
-                            <constraint firstItem="Twk-F6-aew" firstAttribute="trailing" secondItem="waF-qr-R3c" secondAttribute="trailingMargin" id="R7B-eS-Aqh"/>
-                            <constraint firstItem="1vM-Yz-Nz6" firstAttribute="top" secondItem="Twk-F6-aew" secondAttribute="bottom" constant="20" id="fnE-KU-SP2"/>
-                            <constraint firstItem="Twk-F6-aew" firstAttribute="leading" secondItem="waF-qr-R3c" secondAttribute="leadingMargin" id="wfF-UZ-PBy"/>
+                            <constraint firstItem="Twk-F6-aew" firstAttribute="trailing" secondItem="waF-qr-R3c" secondAttribute="trailingMargin" id="Ath-E6-kzH"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="centerX" secondItem="Twk-F6-aew" secondAttribute="centerX" id="aev-xC-JtC"/>
+                            <constraint firstItem="Twk-F6-aew" firstAttribute="leading" secondItem="waF-qr-R3c" secondAttribute="leadingMargin" id="atp-ZC-htd"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="leading" secondItem="Y3D-CS-bBz" secondAttribute="leading" id="eca-pD-sOG"/>
+                            <constraint firstItem="Twk-F6-aew" firstAttribute="top" secondItem="RiX-Wz-yXw" secondAttribute="bottom" constant="8" id="iqG-Lb-U7H"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="top" secondItem="Twk-F6-aew" secondAttribute="bottom" constant="12" id="ncA-82-OS2"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="bottom" secondItem="Y3D-CS-bBz" secondAttribute="bottom" id="oyu-ir-TdW"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="bottom" secondItem="1vM-Yz-Nz6" secondAttribute="top" id="uAB-8g-Hap"/>
+                            <constraint firstItem="9cz-2F-iZu" firstAttribute="trailing" secondItem="Y3D-CS-bBz" secondAttribute="trailing" id="urJ-2S-ynO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="МАФИЯ" id="NmY-rm-AN1">
@@ -684,6 +702,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="ratingTable" destination="Twk-F6-aew" id="gaI-0U-eTa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hdc-nN-2Ab" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="0Xm-RQ-06J" userLabel="Exit" sceneMemberID="exit"/>
