--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -180,11 +180,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rain" translatesAutoresizingMaskIntoConstraints="NO" id="mMH-H9-nnY">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="mMH-H9-nnY" secondAttribute="height" multiplier="125:206" id="BK1-FY-pCQ"/>
+                                    <constraint firstAttribute="width" secondItem="mMH-H9-nnY" secondAttribute="height" multiplier="125:206" constant="-29.733009708737825" id="BK1-FY-pCQ"/>
                                 </constraints>
                             </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="68" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="cge-AA-EFm">
+                                <rect key="frame" x="16" y="72" width="343" height="546"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="oNQ-Ax-mL0" id="X68-On-5m3"/>
+                                    <outlet property="delegate" destination="oNQ-Ax-mL0" id="DYG-Fo-Zzj"/>
+                                </connections>
+                            </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYU-Ow-JOM">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
@@ -212,31 +223,19 @@
                                 </items>
                                 <color key="barTintColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </toolbar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="68" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="cge-AA-EFm">
-                                <rect key="frame" x="16" y="72" width="343" height="522"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <sections/>
-                                <connections>
-                                    <outlet property="dataSource" destination="oNQ-Ax-mL0" id="X68-On-5m3"/>
-                                    <outlet property="delegate" destination="oNQ-Ax-mL0" id="DYG-Fo-Zzj"/>
-                                </connections>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="mMH-H9-nnY" firstAttribute="top" secondItem="LDo-YX-gZU" secondAttribute="top" id="1id-YA-SmB"/>
-                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="top" secondItem="cge-AA-EFm" secondAttribute="bottom" constant="29" id="JMJ-uW-Wed"/>
-                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="leading" secondItem="LDo-YX-gZU" secondAttribute="leading" id="Y9o-WN-Fjw"/>
-                            <constraint firstItem="BbS-iF-QQF" firstAttribute="top" secondItem="XYU-Ow-JOM" secondAttribute="bottom" id="YXf-Re-wR6"/>
+                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="leading" secondItem="LDo-YX-gZU" secondAttribute="leading" id="2ww-tr-ODJ"/>
+                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="bottom" secondItem="BbS-iF-QQF" secondAttribute="top" id="Dvy-DP-3TL"/>
+                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="top" secondItem="cge-AA-EFm" secondAttribute="bottom" constant="5" id="Jq5-2H-gmC"/>
+                            <constraint firstAttribute="trailing" secondItem="XYU-Ow-JOM" secondAttribute="trailing" id="Nie-dD-hP3"/>
                             <constraint firstAttribute="trailing" secondItem="mMH-H9-nnY" secondAttribute="trailing" id="iqz-dN-zZv"/>
-                            <constraint firstItem="XYU-Ow-JOM" firstAttribute="top" secondItem="mMH-H9-nnY" secondAttribute="bottom" constant="5" id="jlT-R0-mLD"/>
                             <constraint firstItem="cge-AA-EFm" firstAttribute="leading" secondItem="LDo-YX-gZU" secondAttribute="leadingMargin" id="oHP-fW-pRi"/>
                             <constraint firstItem="cge-AA-EFm" firstAttribute="trailing" secondItem="LDo-YX-gZU" secondAttribute="trailingMargin" id="oJ3-qa-XaC"/>
                             <constraint firstItem="cge-AA-EFm" firstAttribute="top" secondItem="Ry8-rd-x5f" secondAttribute="bottom" constant="8" id="tBt-t0-oc3"/>
                             <constraint firstItem="mMH-H9-nnY" firstAttribute="leading" secondItem="LDo-YX-gZU" secondAttribute="leading" id="x0y-oN-aTK"/>
-                            <constraint firstAttribute="trailing" secondItem="XYU-Ow-JOM" secondAttribute="trailing" id="xZW-WY-j8M"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="МАФИЯ" id="uiW-uU-I3i"/>
@@ -284,9 +283,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hTs-0E-AWg">
                                 <rect key="frame" x="16" y="139" width="343" height="508"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="hTs-0E-AWg" secondAttribute="height" multiplier="343:508" id="G2X-Wb-9dg"/>
-                                </constraints>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -305,7 +301,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Заголовок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBo-Lr-hgo">
-                                                    <rect key="frame" x="86" y="11.5" width="215" height="21"/>
+                                                    <rect key="frame" x="86" y="12" width="215" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -487,6 +483,7 @@
                             <constraint firstItem="wd0-HK-lkQ" firstAttribute="top" secondItem="LPh-cW-qsP" secondAttribute="bottom" id="HIr-uE-4k9"/>
                             <constraint firstAttribute="trailing" secondItem="LPh-cW-qsP" secondAttribute="trailing" id="Il5-tf-zgq"/>
                             <constraint firstItem="eGI-qB-AjB" firstAttribute="trailing" secondItem="Mco-0r-6X0" secondAttribute="trailingMargin" id="JGD-zt-BLE"/>
+                            <constraint firstAttribute="bottom" secondItem="hTs-0E-AWg" secondAttribute="bottom" constant="20" symbolic="YES" id="JhQ-7E-pC6"/>
                             <constraint firstItem="eGI-qB-AjB" firstAttribute="top" secondItem="9KR-YA-JId" secondAttribute="bottom" constant="12" id="b9O-9k-iNk"/>
                             <constraint firstItem="hTs-0E-AWg" firstAttribute="trailing" secondItem="Mco-0r-6X0" secondAttribute="trailingMargin" id="ers-x2-FfT"/>
                             <constraint firstItem="eGI-qB-AjB" firstAttribute="leading" secondItem="6Lv-qH-zmP" secondAttribute="trailing" constant="8" id="fHO-O9-UwU"/>
