--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -200,7 +200,7 @@
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <barButtonItem image="icon_action2" width="60" id="ups-YX-46y">
+                                    <barButtonItem image="icon 2" width="60" id="ups-YX-46y">
                                         <color key="tintColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <segue destination="K7v-lS-eMm" kind="presentation" identifier="AddItem" id="kzv-YA-sJC"/>
@@ -214,7 +214,7 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="VGj-a0-NAY"/>
-                                    <barButtonItem image="icon_action3" width="60" id="I7d-Fu-rbj">
+                                    <barButtonItem image="icon 3" width="60" id="I7d-Fu-rbj">
                                         <color key="tintColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="tapEndOfTheGameButton:" destination="oNQ-Ax-mL0" id="aE0-Vx-L5I"/>
@@ -329,7 +329,7 @@
                                                         <constraint firstAttribute="width" constant="26" id="beb-RY-XNl"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon little check" translatesAutoresizingMaskIntoConstraints="NO" id="Coh-ZZ-1Ib">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon little check point" translatesAutoresizingMaskIntoConstraints="NO" id="Coh-ZZ-1Ib">
                                                     <rect key="frame" x="306" y="6" width="32" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="32" id="KHB-ov-mKR"/>
@@ -410,7 +410,7 @@
                                                         <constraint firstAttribute="width" constant="1" id="2vJ-Qe-MtY"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon little check" translatesAutoresizingMaskIntoConstraints="NO" id="E30-w1-rWn">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon check point" translatesAutoresizingMaskIntoConstraints="NO" id="E30-w1-rWn">
                                                     <rect key="frame" x="306" y="18" width="33" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="B31-vd-Z3G"/>
@@ -601,7 +601,7 @@
                                                         <constraint firstAttribute="height" constant="44" id="xVx-sP-S3O"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Combined Shape Copy 4" translatesAutoresizingMaskIntoConstraints="NO" id="IdY-aw-e61">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon ratin global big" translatesAutoresizingMaskIntoConstraints="NO" id="IdY-aw-e61">
                                                     <rect key="frame" x="288" y="17" width="8" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="MEu-uZ-sPp"/>
@@ -663,7 +663,7 @@
                                 </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cz-2F-iZu">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <rect key="frame" x="-29" y="623" width="433" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Gzk-xE-YsP"/>
                                     <barButtonItem title="Сбросить статистику" id="hSb-E1-897">
@@ -733,15 +733,16 @@
     </scenes>
     <resources>
         <image name="Bottom people" width="375" height="152"/>
-        <image name="Combined Shape Copy 4" width="8" height="15"/>
         <image name="People rating icon" width="44" height="44"/>
-        <image name="Rain" width="375" height="618"/>
+        <image name="Rain" width="433" height="703"/>
         <image name="Rectangle 3" width="343" height="75"/>
         <image name="Role icon sitizen" width="59" height="59"/>
         <image name="check" width="26" height="26"/>
-        <image name="icon little check" width="33" height="32"/>
-        <image name="icon_action2" width="38" height="39"/>
-        <image name="icon_action3" width="39" height="39"/>
+        <image name="icon 2" width="38" height="38"/>
+        <image name="icon 3" width="38" height="38"/>
+        <image name="icon check point" width="33" height="32"/>
+        <image name="icon little check point" width="33" height="32"/>
+        <image name="icon ratin global big" width="8" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="s5s-Go-K6O"/>
